[package]
name = "kafka-mock-gen"
version = "0.1.1"
edition = "2021"

[dependencies]
rdkafka = { version = "0.38", features = [ "cmake-build"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
log = "0.4"
clap = { version = "4.5.48", features = ["derive"] }
chrono = "0.4.39"
env_logger = "0.11.5"

